Prodevuxitivity - Labels support in CLI (#298)
* basic label classes, basic add API call

* fix missing license header

* cleanup, use generic str response

* delete label command

* fix, missing license header

* update tower sdk version

* Upgrade Tower SDK v1.5.0

* Use user-info endpoint instead of deprecated profile endpoint

* Fix user info tests

Signed-off-by: Jordi Deu-Pons <jordi@jordeu.net>

* use workspace mixin

* fix, missing var

* basic label classes, basic add API call

* fix missing license header

* cleanup, use generic str response

* delete label command

* fix, missing license header

* use workspace mixin

* fix, missing var

* list labels cmd

* fix, list labels cmd include response

* fix, include reflection file

* fix, list labels show resource/normal

* fix, use mixin wsp in delete labels cmd

* use proper response object in delete labels cmd

* do not handle exception in delete label cmd

* delete redundant check for cli option

* use builder pattern for request creation

* fix: missing license header

* Feature/230 add labels support subcomands (#299)

* initial commit

* basic label mangement

* added compute env support

* license fix

* tests fix

* rollback env variables

* add label type to listLabels request

* style fixes after review

---------

Co-authored-by: Andrea Tortorella <andrea.tortorella@seqera.io>

* Show labels pull request (#300)

* add labels row to runs list

* Fix table add labels column

* add labels row to runs view

* add labels row to actions view

* add labels row to actions list, refactor flag

* add labels row to pipeline list

* fix add row visibility in pipelines list

* Use user-info endpoint instead of deprecated profile endpoint

* Fix user info tests

Signed-off-by: Jordi Deu-Pons <jordi@jordeu.net>

* add method in FormatHelper to convert a list of labels into a string

---------

Signed-off-by: