@@ -12,14 +12,18 @@
 package io.seqera.tower.cli.commands.actions;
 
 import io.seqera.tower.ApiException;
+import io.seqera.tower.cli.commands.global.ShowLabelsOption;
 import io.seqera.tower.cli.commands.global.WorkspaceOptionalOptions;
 import io.seqera.tower.cli.responses.Response;
 import io.seqera.tower.cli.responses.actions.ActionsList;
+import io.seqera.tower.model.ActionQueryAttribute;
 import io.seqera.tower.model.ListActionsResponse;
+import io.seqera.tower.model.ListLabelsResponse;
 import picocli.CommandLine;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @CommandLine.Command(
         name = "list",
@@ -30,13 +34,18 @@ public class ListCmd extends AbstractActionsCmd {
     @CommandLine.Mixin
     public WorkspaceOptionalOptions workspace;
 
+    @CommandLine.Mixin
+    public ShowLabelsOption showLabelsOption;
+
     @Override
     protected Response exec() throws ApiException, IOException {
         Long wspId = workspaceId(workspace.workspace);
 
-        ListActionsResponse response = api().listActions(wspId, Collections.emptyList());
+        List<ActionQueryAttribute> actionQueryAttributes = showLabelsOption.showLabels ? List.of(ActionQueryAttribute.LABELS) : NO_ACTION_ATTRIBUTES;
 
-        return new ActionsList(response.getActions(), userName(), baseWorkspaceUrl(wspId));
+        ListActionsResponse response = api().listActions(wspId, actionQueryAttributes);
+
+        return new ActionsList(response.getActions(), userName(), baseWorkspaceUrl(wspId), showLabelsOption.showLabels);
     }
 }
 
